# massive

./: .gitignore  .gitmodules  .harper-dictionary.txt  CONTEXT.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
animation/: Cargo.toml
animation/src/: animated.rs  animation.rs  animator.rs  blended.rs  blended_animation.rs  coordinator.rs  interpolatable.rs  interpolation.rs  lib.rs  movement.rs  tickery.rs  time_scale.rs  timeline.rs
animation/src/blended/: hermite.rs  linear.rs
applications/: Cargo.toml
applications/src/: application_context.rs  instance.rs  instance_context.rs  instance_environment.rs  lib.rs  persistence.rs  persistence_context.rs  presence.rs  presence_builder.rs  project.rs  render_target.rs  scene.rs  view.rs  view_builder.rs  view_event.rs
desktop/: Cargo.toml
desktop/examples/: desktop.rs
desktop/src/: application_manager.rs  application_registry.rs  band_presenter.rs  desktop.rs  desktop_environment.rs  desktop_interaction.rs  desktop_presenter.rs  desktop_system.rs  desktop_ui.rs  event_router.rs  focus_manager.rs  focus_path.rs  focus_rules.rs  focus_target.rs  focus_tree.rs  hit_tester.rs  instance_manager.rs  instance_presenter.rs  layout.rs  lib.rs  main.rs  navigation.rs  send_transition.rs  targeted_event.rs  ui.rs  view_manager.rs
desktop/src/aggregates/: layout_specs.rs  matrix_positions.rs  mod.rs  ordered_hierarchy.rs
desktop/src/desktop_system/: change.rs  command_dispatch.rs  commands.rs  effects.rs  event_forwarding.rs  focus_input.rs  focus_path_ext.rs  hierarchy_focus.rs  layout_algorithm.rs  layout_effects.rs  layout_state.rs  navigation.rs  presentation.rs  project_commands.rs  topology.rs  zoom_navigation.rs
desktop/src/desktop_system/navigation/: matrix_navigation.rs  zoom_navigation.rs
desktop/src/event_sourcing/: mod.rs
desktop/src/navigation/: mod.rs  navigator.rs  node.rs
desktop/src/project_configuration/: toml_reader.rs  types.rs
desktop/src/projects/: launch_group.rs  launcher_presenter.rs  mod.rs  project.rs  project_interaction.rs  project_presenter.rs  slot_group.rs  visor_layout.rs
desktop/src/projects/configuration/: json_reader.rs  mod.rs  toml_reader.rs  types.rs
examples/code/: Cargo.toml  index.html
examples/code/examples/: code-viewer.rs  code.rs
examples/hello/: Cargo.toml
examples/hello/examples/: hello.rs
examples/logs/: Cargo.toml
examples/logs/examples/: logs.rs
examples/logs/src/terminal/: color.rs  color_schemes.rs  config.rs  mod.rs  named_color.rs  text_attributor.rs
examples/markdown/: Cargo.toml
examples/markdown/examples/: emojis.rs  markdown.rs  markdown2.rs
examples/markdown/examples/fonts/: README.md
examples/shapes/: Cargo.toml
examples/shapes/examples/: basic_shapes.rs  shapes.rs
examples/shared/: Cargo.toml
examples/shared/src/: application.rs  attributed_text.rs  code_viewer.rs  lib.rs  positioning.rs
examples/syntax/: Cargo.toml
examples/syntax/examples/: rick-and-morty.json  syntax.rs
input/: Cargo.toml
input/src/: detect.rs  event.rs  event_aggregator.rs  event_history.rs  event_history_detect.rs  event_manager.rs  external_event.rs  input_event.rs  lib.rs  mouse_gesture.rs  progress.rs  sensor.rs
input/src/tracker/: mod.rs  movement.rs  movement_inactivity.rs
renderer/: Cargo.toml
renderer/examples/: hello.rs  shell.rs
renderer/src/: builder.rs  color_buffer.rs  command.rs  config.rs  font_manager.rs  glyph.rs  lib.rs  path.rs  pipelines.rs  pods.rs  primitives.rs  render_batches.rs  render_cache.rs  render_device.rs  render_geometry.rs  render_submission.rs  renderer.rs  shape.rs  shape_layer_renderer.rs  shape_renderer.rs  shape_renderer.wgsl  size_buffer.rs  skia.rs  stats.rs  text_layer.rs  texture.rs  tools.rs  transactions.rs
renderer/src/glyph/: atlas.rs  distance_field_gen.rs  glyph_atlas.rs  glyph_cache.rs  glyph_classifier.rs  glyph_image_renderer.rs  glyph_param.rs  glyph_rasterization.rs  glyph_renderer.rs  mod.rs
renderer/src/path/: aa_convex_path_renderer.rs
renderer/src/quads/: quads.wgsl  renderer.rs
renderer/src/scene/: dependency_resolver.rs  id_table.rs  location_matrices.rs  mod.rs  versioning.rs
renderer/src/shaders/: character-shader.wgsl
renderer/src/shape/: bind_group.rs  mod.rs  shape.wgsl
renderer/src/simple/: simple.wgsl
renderer/src/text_layer/: atlas_renderer.rs  bind_group.rs  color_atlas.rs  color_atlas.wgsl  mod.rs  renderer.rs  sdf_atlas.rs  sdf_atlas.wgsl  text_layer.wgsl
renderer/src/texture/: bind_group.rs  glyph.wgsl  size.rs  size_buffer.rs  view.rs
renderer/src/tools/: bind_group_layout_builder.rs  mod.rs  pipeline.rs  quad_index_buffer.rs  texture_sampler.rs  versioning.rs
scene/: Cargo.toml
scene/src/: change.rs  change_collector.rs  change_surface.rs  change_tracker.rs  ergonomics.rs  handle.rs  id.rs  lib.rs  objects.rs  scene.rs  timeline.rs  transform_resolver.rs  type_id_generator.rs
shapes/: Cargo.toml
shapes/src/: glyph_run.rs  lib.rs  shape.rs  shapes.rs  text.rs  text_layout.rs  text_shaper.rs
shell/: Cargo.toml  index.html
shell/examples/: character-shader.wgsl  character.rs  code.rs  hello.rs  markdown.rs  replicator.org.md  shader.wgsl  window.rs
shell/examples/code/: main.rs  test.rs
shell/examples/code_viewer/: code.postcard  main.rs
shell/examples/emojis/: emojis.md  main.rs
shell/examples/markdown/: main.rs  replicator.org.md
shell/examples/shared/: application.rs  positioning.rs
shell/examples/syntax/: main.rs
shell/shared/: Cargo.toml
shell/shared/src/: application.rs  application2.rs  code_viewer.rs  lib.rs  positioning.rs
shell/src/: application_context.rs  async_window_renderer.rs  lib.rs  message_filter.rs  render_thread.rs  scene.rs  shell.rs  shell2.rs  shell3.rs  shell_context.rs  shell_window.rs  window_renderer.rs  window_renderer_builder.rs
shell/src/platform/: macos_menu.rs  mod.rs
text/: Cargo.toml
text/examples/: character.rs  hello.rs
text/src/: distance_field_gen.rs  label.rs  layout.rs  lib.rs  point.rs  render_graph.rs  vertex.rs
text/src/shaders/: character-shader.wgsl
(+70 files in other folders)
