[workspace]
resolver = "3"

members = [
    "animation",
    "geometry",
    "input",
    "shapes",
    "renderer",
    "shell",
    "scene",
    "applications",
    "desktop",
    "util", 
    "examples/*",
]

exclude = [
    "examples/dist",
    "examples/code/rust-analyzer"
]

[workspace.package]
edition = "2024"

[workspace.metadata]
# For trunk
root-package = "shell"

# exclude = [ "inlyne" ]

[workspace.dependencies]
massive-animation = { path = "animation" }
massive-applications = { path = "applications" }
massive-geometry = { path = "geometry" }
massive-input = { path = "input" }
massive-modules = { path = "modules" }
massive-renderer = { path = "renderer" }
massive-scene = { path = "scene" }
massive-shapes = { path = "shapes" }
massive-shell = { path = "shell" }
massive-util = { path = "util" }

anyhow = "1.0.71"
approx = "0.5.1"
bitflags = { version = "2.9.1" }
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
chrono = "0.4.38"
cosmic-text = { version = "0.15.0", features = ["swash"] }
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = "0.11.3"
euclid = { version = "0.22.11" }
flo_curves = "0.8.0"
futures = { version = "0.3.30" }
itertools = "0.14.0"
log = "0.4.28"
parking_lot = "0.12.5"
postcard = { version = "1.0.8", features = ["use-std"] }
replace_with = { version = "0.1.8" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.116"
serde_tuple = "1.1.2"
smallbox = "0.8.8"
static_assertions = "1.1.0"
swash = "0.2.5"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wgpu = "26.0.1"
winit = { version = "0.30.12", features = ["rwh_06"] }
uuid = { version = "1.18.1", features = ["v4"] }

# rt-multi-thread is not supported on wasm
tokio = { version = "1.36.0", features = ["macros", "sync"] }

# wasm

wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50" }
web-sys = "0.3.77"
