[workspace]
resolver = "3"

members = [
    "animation",
    "applications",
    "desktop",
    "geometry",
    "input",
    "layout",
    "renderer",
    "scene",
    "shapes",
    "shell",
    "util", 

    "examples/*",
]

exclude = [
    "examples/dist",
    "examples/code/rust-analyzer"
]

[workspace.package]
edition = "2024"

[workspace.metadata]
# For trunk
root-package = "shell"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.dependencies]
massive-animation = { path = "animation" }
massive-applications = { path = "applications" }
massive-geometry = { path = "geometry" }
massive-input = { path = "input" }
massive-layout = { path = "layout" }
massive-modules = { path = "modules" }
massive-renderer = { path = "renderer" }
massive-scene = { path = "scene" }
massive-shapes = { path = "shapes" }
massive-shell = { path = "shell" }
massive-util = { path = "util" }

anyhow = "1.0.71"
approx = "0.5.1"
bitflags = "2.9.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
chrono = "0.4.38"
cosmic-text = { version = "0.15.0", features = ["swash"] }
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = "0.11.3"
euclid = "0.22.11"
flo_curves = "0.8.0"
futures = "0.3.30"
glam = "0.30.9"
itertools = "0.14.0"
log = "0.4.28"
parking_lot = "0.12.5"
postcard = { version = "1.0.8", features = ["use-std"] }
replace_with = "0.1.8"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.149"
serde_tuple = "1.1.2"
smallbox = "0.8.8"
static_assertions = "1.1.0"
swash = "0.2.5"
toml = "0.9.8"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
wgpu = "28.0.0"
winit = { version = "0.30.12", features = ["rwh_06"] }

# rt-multi-thread is not supported on wasm
tokio = { version = "1.36.0", features = ["macros", "sync"] }

# wasm

wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50" }
web-sys = "0.3.77"
