[package]
name = "massive-animation"
version = "0.1.0"
edition = "2021"

[dependencies]
# For implementing Interpolatable on geometry types.
massive-geometry.workspace = true

log.workspace = true
parking_lot.workspace = true

[dev-dependencies]
# Enable bitmap backend and encoder so `BitMapBackend::new` is available, plus TTF for font rendering.
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "ttf", "line_series"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { version = "1.1.0" }
