[package]
name = "massive-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
massive-geometry = { workspace = true }
massive-shapes = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
cgmath = { workspace = true }
anyhow = { workspace = true }
derive_more = { workspace = true }
cosmic-text = { workspace = true }
swash = { workspace = true }
log = { workspace = true }
approx = { workspace = true }
bitflags = { workspace = true }
static_assertions = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

# Atlas

etagere = "0.2.10"
euclid = "0.22.9"
