[package]
name = "massive-renderer"
version = "0.1.0"
edition.workspace = true

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[features]
dump_edge = []

[dependencies]
massive-geometry = { workspace = true }
massive-scene = { workspace = true }
massive-shapes = { workspace = true }

anyhow = { workspace = true }
approx = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
cosmic-text = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
static_assertions = { workspace = true }
swash = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
parking_lot.workspace = true

sys-locale = "0.3.2"
unicode-script = "0.5.7"

# Atlas

etagere = "0.2.10"
euclid = "0.22.9"
