[package]
name = "massive-scene"
version = "0.1.0"
edition.workspace = true

[dependencies]
massive-shapes = { workspace = true }
massive-geometry = { workspace = true }
derive_more = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }

# For channels only
tokio = { workspace = true }