[package]
name = "massive-shapes"
version = "0.1.0"
edition.workspace = true

[dependencies]
massive-geometry = { workspace = true }
# TODO: This is a bit heavyweight here, we need it for the CacheKey
cosmic-text = { workspace = true }
# TODO: This is needed for Weight.
swash = { workspace = true }
derive_more = { workspace = true }
cgmath = { workspace = true }
serde = { workspace = true }
