[package]
name = "massive-shapes"
version = "0.1.0"
edition.workspace = true

[dependencies]
massive-geometry = { workspace = true }
# Needed for TextShaping and GlyphRun CacheKey
cosmic-text = { workspace = true }
# Gorilla: This is needed for Weight.
swash = { workspace = true }
derive_more = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
smallbox.workspace = true
