[package]
name = "massive-shell"
version = "0.1.0"
edition.workspace = true

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
massive-geometry = { workspace = true }
massive-renderer = { workspace = true }
massive-shapes = { workspace = true }
massive-scene = { workspace = true }
massive-animation = { workspace = true }

env_logger = { workspace = true }
anyhow = { workspace = true }

winit = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
cosmic-text = { workspace = true }
cgmath = { workspace = true }
futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]

tokio = { workspace = true, features = ["rt"] }
getrandom = { version = "0.2.12", features = ["js"] }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
web-time = { version = "1.1.0" }