[package]
name = "massive-shell"
version = "0.1.0"
edition.workspace = true

[features]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
massive-geometry.workspace = true
massive-renderer.workspace = true
massive-shapes.workspace = true
massive-scene.workspace = true
massive-animation.workspace = true
massive-applications.workspace = true
massive-util.workspace = true

anyhow.workspace = true
cosmic-text.workspace = true
derive_more.workspace = true
env_logger.workspace = true
futures.workspace = true
glam.workspace = true
log.workspace = true
parking_lot.workspace = true
replace_with.workspace = true
wgpu.workspace = true
winit.workspace = true

metrics = { version = "0.24.2", optional = true }
metrics-exporter-prometheus = { version = "0.17.2", features = ["push-gateway"], optional = true }

sys-locale = { version = "0.3.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

tokio = { workspace = true, features = ["rt"] }
getrandom = { version = "0.2.12", features = ["js"] }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
web-time = { version = "1.1.0" }