[package]
name = "logs"
version = "0.1.0"
edition = "2021"

[dependencies]
termwiz = "0.23.3"
massive-geometry = { workspace = true }
massive-shapes = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]

massive-shell = { workspace = true }
massive-scene = { workspace = true }
massive-animation = { workspace = true }

anyhow = { workspace = true }
cosmic-text = { workspace = true }
log = { workspace = true }
winit = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.17.0", features = ["js"] }


