[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shell/shared" }

massive-geometry = {workspace = true }
massive-shell = {workspace = true }
massive-scene = {workspace = true }
massive-shapes = {workspace = true }

anyhow = { workspace = true }
cosmic-text = { workspace = true }
inlyne = { path = "inlyne" }
log = { workspace = true }
winit = { workspace = true }
