[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
shared = { path = "../shared" }

massive-geometry = { workspace = true }
massive-shell = { workspace = true }
massive-scene = { workspace = true }
massive-shapes = { workspace = true }

anyhow = { workspace = true }
cosmic-text = { workspace = true }
inlyne = { path = "inlyne" }
log = { workspace = true }
winit = { workspace = true }
swash = { workspace = true }

# Specify a random generator to use for wasm targets
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
uuid = { version = "1.17.0", features = ["js"] }
