[package]
name = "markdown"
version = "0.1.0"
edition.workspace = true

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dev-dependencies]
shared = { path = "../shared" }

tracing-subscriber = { workspace = true }
tracing-chrome = { workspace = true }
chrono = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }

massive-geometry = { workspace = true }
massive-shell = { workspace = true }
massive-scene = { workspace = true }
massive-shapes = { workspace = true }

cosmic-text = { workspace = true }
inlyne = { path = "inlyne" }
log = { workspace = true }
winit = { workspace = true }
swash = { workspace = true }

cgmath = { workspace =  true }

# Specify a random generator to use for wasm targets
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
uuid = { version = "1.17.0", features = ["js"] }
