[package]
name = "shapes-example"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
cosmic-text = { workspace = true }
winit = { workspace = true }
tokio = { workspace = true }

massive-geometry = { workspace = true }
massive-shapes = { workspace = true }
massive-shell = { workspace = true }
massive-scene = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.17.0", features = ["js"] }
