[package]
name = "syntax"
version = "0.1.0"
edition.workspace = true

[dev-dependencies]
shared = { path = "../shared" }

tokio = { workspace = true }
anyhow = { workspace = true }


massive-geometry = {workspace = true }
massive-shell = {workspace = true }
massive-scene = {workspace = true }
massive-shapes = {workspace = true }

winit = { workspace = true }
cosmic-text = { workspace = true }

syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
