[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
massive-geometry = { workspace = true }
massive-shapes = { workspace = true }
massive-shell = { workspace = true }
winit = { workspace = true }
cgmath = { workspace = true }
serde = { workspace = true }
serde_tuple = { workspace = true }
cosmic-text = { workspace = true }
itertools = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]

console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
wasm-bindgen = "0.2.92"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
